--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node -r dotenv/config ./bin/www",
     "test": "vows --spec"
   },
   "dependencies": {
+    "argon2": "^0.24.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "express": "~4.16.1",
+    "express-jwt": "^5.3.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.2.1",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "pug": "^2.0.4",
@@ -24,7 +29,14 @@
     "sinon-mongoose": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/node": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "chai": "^4.2.0",
+    "jshint": "^2.10.2",
     "mocha": "^6.1.4"
   }
 }
