--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "debug": "~2.6.9",
     "dotenv": "^8.0.0",
     "express": "~4.16.1",
+    "express-graphql": "^0.8.0",
     "express-jwt": "^5.3.1",
+    "graphql": "^14.4.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.0",
